--- a/config/services.yml
+++ b/config/services.yml
@@ -4,5 +4,6 @@ services:
         arguments:
             - @config
             - @request
+            - @template
         tags:
             - { name: event.listener }
